--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,22 @@
   "bugs": {
     "url": "https://github.com/hirotoKirimaru/jest-practice/issues"
   },
-  "homepage": "https://github.com/hirotoKirimaru/jest-practice#readme"
+  "homepage": "https://github.com/hirotoKirimaru/jest-practice#readme",
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ]
+  }
 }
