--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^26.0.14",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.3"
+    "jest": "^26.4.2"
   },
   "scripts": {
     "test": "jest"
@@ -25,17 +22,8 @@
   "homepage": "https://github.com/hirotoKirimaru/jest-practice#readme",
   "jest": {
     "moduleFileExtensions": [
-      "ts",
       "js"
     ],
-    "transform": {
-      "^.+\\.ts$": "ts-jest"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsConfig": "tsconfig.json"
-      }
-    },
     "testMatch": [
       "**/tests/**/*.test.js"
     ]
